fix(security): P4 Trivy Docker 系统包豁免补充 + COMMAND_INJECTION 修复 + pg 42.7.2
.trivyignore 补充（首版 3db1baa 后 CI 复扫仍剩 17 个系统包 HIGH）：
- libexpat1 4 个 CVE（affected）、libglib2.0-0 6 个 CVE（fix_deferred）、
  libharfbuzz0b CVE-2023-25193（affected）、libuuid1 CVE-2026-53615
  （affected）——均为 Debian 上游不修/延后/无修复版本
- 注：liblcms2-2/openjdk-17-jre-headless 为 fixed（有修复版本），
  未豁免，待基础镜像更新解决

COMMAND_INJECTION 修复（SAST 真实安全类，2 处）：
- Fifo.java createFifoPipe: Runtime.exec → ProcessBuilder 数组参数
- GenerateClass.java main: Runtime.exec(字符串) → ProcessBuilder 数组参数
  编译验证 BUILD SUCCESSFUL（补 main throws InterruptedException）

nexus-gateway/build.gradle: runtimeOnly postgresql 42.5.4 → 42.7.2
（模块级硬编码覆盖根版本，CVE-2024-1597 CRITICAL 消除）

Co-Authored-By: AtomCode (deepseek-v4-flash) <noreply@atomgit.com>